Preloading fonts and Ensure text remains visible during webfont load

--- a/themes/blueberry/development/sass/_typography.scss
+++ b/themes/blueberry/development/sass/_typography.scss
@@ -23,6 +23,7 @@ body {
          url('/fonts/aristotelicasmallcaps-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -31,6 +32,7 @@ body {
        url('/fonts/configcondensed-bold-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -39,6 +41,7 @@ body {
          url('/fonts/sf-pro-text-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -47,6 +50,7 @@ body {
          url('/fonts/sf-pro-text-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -55,6 +59,7 @@ body {
          url('/fonts/letristascript-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 $font-handwrtten: "letrista_script", Helvetica, sans-serif;
